# feedbackd-device-themes

./: .gitignore  .gitlab-ci.yml  COPYING  NEWS  README.md  meson.build  meson_options.txt
data/: google,sargo.json  meson.build  oneplus,enchilada.json  oneplus,fajita.json  pine64,pinephone-pro.json  pine64,pinephone.json  samsung,midas.json  shift,axolotl.json  xiaomi,beryllium.json
debian/: changelog  control  copyright  feedbackd-device-themes.install  gbp.conf  watch
tests/: meson.build
